--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
               ⬇️ Exportar CSV
             </button>
             <button id="btnPrintPdf" class="btn btn-soft-accent btn-sm">
-              🖨️ Imprimir Acta
+              🖨️ Imprimir Lista
             </button>
           </div>
         </div>
